implemented deal stuff
