# doc/swagger.yaml
@@ -334,7 +334,7 @@ paths:
           description: "bad parameters"
 
   /ad/{ad_id}/make_deal:
-    post:
+    put:
       summary: "Выбрать пользователя, с которым заключить сделку об отдаче товара"
       tags:
         - ad
@@ -343,11 +343,10 @@ paths:
           in: path
           required: true
           type: integer
-        - name: deal_details
-          schema:
-            $ref: "#/definitions/DealDetails"
-          in: body
-          description: Author ID and subscriber id
+        - name: subscriber_id
+          in: query
+          required: true
+          type: integer
       responses:
         201:
           description: "deal created"
@@ -356,7 +355,7 @@ paths:
         403:
           description: "author id doesn't match with authors"
         409:
-          description: "no subscriber id in subscribers list"
+          description: "no subscriber id in subscribers list or deal already exists"
         401:
           description: "no auth"
   /ad/{ad_id}/deal:
@@ -374,6 +373,8 @@ paths:
           description: "there is a pending deal"
           schema:
             $ref: "#/definitions/DealDetails"
+        400:
+          description: "wrong parameters"
         404:
           description: "no pending deal for ad"
   /ad/{ad_id}/comments:
@@ -464,7 +465,8 @@ paths:
   /deal/{deal_id}/cancel:
     post:
       tags: ["deal"]
-      summary: "Отменить сделку. Если id - id автора или id - id подписчика"
+      summary: "Отменить сделку."
+      description: "Если id - id автора, то объявление остается открытым и сделка удаляется; если id - id подписчика, то сделка удаляется, а объявление становится aborted"
       parameters:
         - name: "deal_id"
           type: "integer"
@@ -482,7 +484,7 @@ paths:
   /deal/{deal_id}/fulfill:
     post:
       tags: ["deal"]
-      summary: "Пометить, что сделка успешна. Необходимы пометки от автора и подписчика для реального успеха"
+      summary: "Пометить, что сделка успешна. Производится только пользователем(не автором объявления)"
       parameters:
         - name: "deal_id"
           type: "integer"
@@ -689,13 +691,11 @@ definitions:
         type: integer
       ad_id:
         type: integer
-      author_id:
-        type: integer
       subscriber_id:
-        type: string
+        type: integer
       status:
         type: string
-        enum: ["open", "submitted_by_one", "success", "failed"]
+        enum: ["open", "success"]
         default: "open"
   DonationRequest:
     type: object
